--- a/src/tpl/partials/contacts.html
+++ b/src/tpl/partials/contacts.html
@@ -47,6 +47,9 @@
                     <div class="form__input-left">
                         <div class="form__input-wrapper" data-validate="Name is required">
                             <input class="form__input" type="text" placeholder="NAME">
+                            <span class="focus-border">
+                                <i></i>
+                            </span>
                         </div>
                         <div class="form__input-wrapper" data-validate="Email is required">
                             <input class="form__input" type="text" placeholder="EMAIL">
@@ -59,7 +62,7 @@
                         <div class="form__input-wrapper" data-validate="Message is required">
 
 
-                            <textarea class="form__input" name="message" placeholder="MESSAGE"></textarea>
+                            <textarea class="form__input" id="input" name="message" placeholder="MESSAGE"></textarea>
 
 
 
