--- a/src/tpl/partials/header--top.html
+++ b/src/tpl/partials/header--top.html
@@ -67,8 +67,8 @@
             elementum magna ultricies accumsan. Cras venenatis lacus sed dolor placerat tempus. Morbi blandit at neque
             ut imperdiet.</p>
           <div class="introduction__btn-container ">
-            <button class="button-primary button">DOWNLOAD NOW</button>
-            <button class="button-secondary button">VIEW FEATURES</button>
+            <button class="button-secondary _btn button">DOWNLOAD NOW</button>
+            <button class="button-secondary _btn button">VIEW FEATURES</button>
           </div>
         </div>
         <div class="introduction__img-container col">
