--- a/src/tpl/partials/pricing-plans.html
+++ b/src/tpl/partials/pricing-plans.html
@@ -25,7 +25,7 @@
                 <div class="card-body card__bottom-content ">
                     <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
                         ipsum <span>lacinia</span> consectetur.</p>
-                    <button class="button-primary button">ORDER NOW</button>
+                    <button class="button-secondary _btn button-pricing button">ORDER NOW</button>
                 </div>
             </div>
             <div class="card card-wrapper ">
@@ -42,7 +42,7 @@
                 <div class="card-body card__bottom-content ">
                     <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
                         ipsum <span>lacinia</span> consectetur.</p>
-                    <button class="button-primary button">ORDER NOW</button>
+                    <button class="button-secondary _btn button-pricing button">ORDER NOW</button>
                 </div>
             </div>
             <div class="card card-wrapper ">
@@ -59,12 +59,12 @@
                 <div class="card-body card__bottom-content ">
                     <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
                         ipsum <span>lacinia</span> consectetur.</p>
-                    <button class="button-primary button">ORDER NOW</button>
+                    <button class="button-secondary _btn button-pricing button">ORDER NOW</button>
                 </div>
             </div>
             <div class="card card-wrapper ">
                 <div class="card-header card-header__title">ULTIMATE</div>
-                <div class="card-middle__wrapper">
+                <div class="card-middle__wrapper ">
                     <div class="card__title-wrapper ">
 
                         <span class="card__dollar">$</span>
@@ -76,7 +76,7 @@
                 <div class="card-body card__bottom-content ">
                     <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
                         ipsum <span>lacinia</span> consectetur.</p>
-                    <button class="button-primary button">ORDER NOW</button>
+                    <button class="button-secondary _btn button-pricing button">ORDER NOW</button>
                 </div>
             </div>
         </div>
