--- a/src/tpl/partials/testimonals.html
+++ b/src/tpl/partials/testimonals.html
@@ -146,13 +146,13 @@
 </section>
 
 
- <section class="testimonals__bottom-content">
+<section class="testimonals__bottom-content">
     <div class="container testimonals__bottom-container">
         <h2 class="testimonals__bottom-title">Like what you see? <span>Get this great theme now!</span> </h2>
         <div class="testimonals__btn-container ">
-            <button class="button-secondary button">VIEW FEATURES</button>
-            <button class="button-primary button">DOWNLOAD NOW</button>
+            <button class="button-secondary _btn button">VIEW FEATURES</button>
+            <button class="button-secondary _btn button">DOWNLOAD NOW</button>
         </div>
     </div>
 
-</section> 
+</section>
