--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -85,7 +85,8 @@ letter-spacing: 1px;
     align-items: center;
     display: flex;
     justify-content: center;
-
+    border-radius: 5px;
+    transition: all .5s;
 }
 @mixin button-secondary{
     font-size: 14px;
@@ -103,6 +104,8 @@ letter-spacing: 1px;
     display: flex;
     justify-content: center;
     font-size: 14px;
+    border-radius: 5px;
+    transition: all .5s;
 }
 
 @mixin features-icon{
