--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -10,3 +10,63 @@
 .button-secondary{
     @include m.button-secondary;
 }
+.button-pricing{
+    background: v.$main-white-color;
+    color: v.$main-blue-color;
+    border: 1px solid #E0E0E0;
+}
+
+.button-pricing:hover{
+    color:  v.$main-white-color;
+}
+
+.button-secondary:hover{
+    border: 1px solid transparent;
+    
+}
+._btn {
+	position: relative;
+	transition: 0.5s ease;
+	z-index: 1;
+	overflow: hidden;
+}
+
+._btn::after,
+._btn::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+    background-color: v.$main-blue-color;
+	transition: 0.7s ease;
+	z-index: -1;
+    
+}
+._btn::before {
+	content: "";
+	left: -100%;
+	transform: rotate(60deg);
+}
+._btn::after {
+	content: "";
+	right: -100%;
+	transform: rotate(60deg);
+}
+._btn:hover {
+	
+}
+._btn:hover::before,
+._btn:hover::after {
+	content: "";
+	height: 340%;
+	width: 150%;
+}
+._btn:hover::before {
+	content: "";
+	left: -30%;
+}
+._btn:hover::after {
+	content: "";
+	right: -70%;
+}
