--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -47,13 +47,17 @@
         margin-bottom: 20px;
         height: 50px;
         border: 1px solid rgba(255, 255, 255, 0.2);
+        outline: none;
+        transition: all .5s;
     }
+  
     
     &__input-right &__input-wrapper:nth-of-type(1) textarea.form__input{
         height: 190px;
         max-width: 300px;
         padding-top: 14px;
         resize: none;
+        outline: none;
     }
     
     
@@ -61,8 +65,20 @@
     textarea.form__input::placeholder  {
         color:  rgba(255, 255, 255, 0.2);
         font-size: 15px;
+
+        transition: color 0.4s ease;
     }
+    &__input-wrapper &__input:focus {
+        border: 1px solid v.$main-blue-color;
+    }
+        
+    &__input-wrapper &__input:focus::placeholder,
+    textarea.form__input:focus::placeholder  {
+        color: transparent;
+    }
+  
 }
+
 
 
 
@@ -106,3 +122,7 @@
 }
 
 
+
+input:focus{
+     color:  transparent;
+}
