--- a/src/tpl/partials/pricing-plans.html
+++ b/src/tpl/partials/pricing-plans.html
@@ -13,7 +13,7 @@
         <div class="cards-container  row row-cols-md-2 row-cols-lg-4  ">
             <div class="card card-wrapper ">
                 <div class="card-header card-header__title">FREE</div>
-                <div class="card-middle__wrapper">
+                <div class="card-middle__wrapper hover-efect ">
                     <div class="card__title-wrapper ">
 
                         <span class="card__dollar">$</span>
@@ -30,7 +30,7 @@
             </div>
             <div class="card card-wrapper ">
                 <div class="card-header card-header__title">PERSONAL</div>
-                <div class="card-middle__wrapper">
+                <div class="card-middle__wrapper hover-efect ">
                     <div class="card__title-wrapper ">
 
                         <span class="card__dollar">$</span>
@@ -47,7 +47,7 @@
             </div>
             <div class="card card-wrapper ">
                 <div class="card-header card-header__title">BUSINESS</div>
-                <div class="card-middle__wrapper">
+                <div class="card-middle__wrapper hover-efect ">
                     <div class="card__title-wrapper ">
 
                         <span class="card__dollar">$</span>
@@ -64,7 +64,7 @@
             </div>
             <div class="card card-wrapper ">
                 <div class="card-header card-header__title">ULTIMATE</div>
-                <div class="card-middle__wrapper ">
+                <div class="card-middle__wrapper hover-efect ">
                     <div class="card__title-wrapper ">
 
                         <span class="card__dollar">$</span>
