--- a/src/tpl/partials/contacts.html
+++ b/src/tpl/partials/contacts.html
@@ -46,10 +46,11 @@
                 <form action="" class="form__wrapper row row-cols-2 ">
                     <div class="form__input-left">
                         <div class="form__input-wrapper" data-validate="Name is required">
-                            <input class="form__input" type="text" placeholder="NAME">
+                            <input class="form__input name-input " type="text" placeholder="NAME">
+                            <span class="name-error" ></span>
                             <span class="focus-border">
                                 <i></i>
-                            </span>
+                            </span> 
                         </div>
                         <div class="form__input-wrapper" data-validate="Email is required">
                             <input class="form__input" type="text" placeholder="EMAIL">
