--- a/src/tpl/partials/testimonals.html
+++ b/src/tpl/partials/testimonals.html
@@ -17,7 +17,7 @@
                                     making their waters salt. “When we come to you,” said they to the Sea.
                                 </p>
                                 <div class="slider-testimonal__wrapper">
-                                    <span class="slider-testimonal__icon"></span>
+                                    <span class="slider-testimonal__icon slider-testimonal__icon--first"></span>
                                     <div class="slider-testimonal-text__wrapper">
                                         <span class="slider__testimonal-text">John Doe</span>
                                         <span class="slider__testimonal-text">CEO, THE RIVERS COMPANY</span>
@@ -30,7 +30,7 @@
                                     the way you walk. The way you're going to move is quite dictated by your shoes.
                                 </p>
                                 <div class="slider-testimonal__wrapper">
-                                    <span class="slider-testimonal__icon"></span>
+                                    <span class="slider-testimonal__icon slider-testimonal__icon--second"></span>
                                     <div class="slider-testimonal-text__wrapper">
                                         <span class="slider__testimonal-text">Dean Winchester</span>
                                         <span class="slider__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
@@ -48,7 +48,7 @@
                                     making their waters salt. “When we come to you,” said they to the Sea.
                                 </p>
                                 <div class="slider-testimonal__wrapper">
-                                    <span class="slider-testimonal__icon"></span>
+                                    <span class="slider-testimonal__icon slider-testimonal__icon--first"></span>
                                     <div class="slider-testimonal-text__wrapper">
                                         <span class="slider__testimonal-text">John Doe</span>
                                         <span class="slider__testimonal-text">CEO, THE RIVERS COMPANY</span>
@@ -61,7 +61,7 @@
                                     the way you walk. The way you're going to move is quite dictated by your shoes.
                                 </p>
                                 <div class="slider-testimonal__wrapper">
-                                    <span class="slider-testimonal__icon"></span>
+                                    <span class="slider-testimonal__icon slider-testimonal__icon--second"></span>
                                     <div class="slider-testimonal-text__wrapper">
                                         <span class="slider__testimonal-text">Dean Winchester</span>
                                         <span class="slider__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
@@ -78,7 +78,7 @@
                                     making their waters salt. “When we come to you,” said they to the Sea.
                                 </p>
                                 <div class="slider-testimonal__wrapper">
-                                    <span class="slider-testimonal__icon"></span>
+                                    <span class="slider-testimonal__icon slider-testimonal__icon--first"></span>
                                     <div class="slider-testimonal-text__wrapper">
                                         <span class="slider__testimonal-text">John Doe</span>
                                         <span class="slider__testimonal-text">CEO, THE RIVERS COMPANY</span>
@@ -91,7 +91,7 @@
                                     the way you walk. The way you're going to move is quite dictated by your shoes.
                                 </p>
                                 <div class="slider-testimonal__wrapper">
-                                    <span class="slider-testimonal__icon"></span>
+                                    <span class="slider-testimonal__icon slider-testimonal__icon--second"></span>
                                     <div class="slider-testimonal-text__wrapper">
                                         <span class="slider__testimonal-text">Dean Winchester</span>
                                         <span class="slider__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
@@ -109,7 +109,7 @@
                                     making their waters salt. “When we come to you,” said they to the Sea.
                                 </p>
                                 <div class="slider-testimonal__wrapper">
-                                    <span class="slider-testimonal__icon"></span>
+                                    <span class="slider-testimonal__icon slider-testimonal__icon--first"></span>
                                     <div class="slider-testimonal-text__wrapper">
                                         <span class="slider__testimonal-text">John Doe</span>
                                         <span class="slider__testimonal-text">CEO, THE RIVERS COMPANY</span>
@@ -122,7 +122,7 @@
                                     the way you walk. The way you're going to move is quite dictated by your shoes.
                                 </p>
                                 <div class="slider-testimonal__wrapper">
-                                    <span class="slider-testimonal__icon"></span>
+                                    <span class="slider-testimonal__icon slider-testimonal__icon--second"></span>
                                     <div class="slider-testimonal-text__wrapper">
                                         <span class="slider__testimonal-text">Dean Winchester</span>
                                         <span class="slider__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
@@ -131,7 +131,6 @@
                             </div>
                         </div>
                     </div>
-
 
                 </div>
                 <div class="swiper-pagination"></div>
