fix: fix images adaptive

--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -108,7 +108,7 @@
         top: -15px;
         font-size: 9px;
         left: 0px;
-        right: -90px;
+    
     }
 
   
@@ -161,3 +161,30 @@
 
 
 
+
+// @media (max-width:767px) {
+    
+// .introduction__img {
+//     max-width: 65%;
+// height: auto;
+// margin-left: auto;
+// margin-right: auto;
+// display: block;
+// }
+
+// .about-img{
+//     max-width: 70%;
+// height: auto;
+// margin-left: auto;
+// margin-right: auto;
+// display: block;
+// }
+
+// .device__img{
+//     max-width: 100%;
+// height: auto;
+// margin-left: auto;
+// margin-right: auto;
+// display: block;
+// }
+// }
