--- a/src/assets/scss/layout/_contacts.scss
+++ b/src/assets/scss/layout/_contacts.scss
@@ -67,3 +67,17 @@
     }
 
 }
+
+
+
+@media (max-width: 767px){
+    .contacts{
+        padding-top: 40px;
+        padding-bottom: 40px;
+        &__top-wrapper{
+            padding-top: 0px;
+        }
+        }
+      }
+
+
