--- a/src/assets/scss/layout/_pricing-plans.scss
+++ b/src/assets/scss/layout/_pricing-plans.scss
@@ -23,3 +23,18 @@
 }       
 
 
+
+
+@media (max-width: 767px){
+    .pricing-plans{
+        padding-top: 40px;
+        padding-bottom: 40px;
+        margin-bottom: 0px;
+
+        &__container{
+            padding-top: 0px;
+        }
+    }
+}
+
+
