--- a/src/tpl/partials/contacts.html
+++ b/src/tpl/partials/contacts.html
@@ -5,7 +5,7 @@
                 <h3 class="contacts__sub-title">STAY IN TOUCH</h3>
                 <h2 class="contacts__title">Contact us</h2>
                 <span class="lines__contacts"></span>
-                <div class="contacts__items-container  row row-cols-lg-3 row-cols-2">
+                <div class="contacts__items-container  row row-cols-lg-3">
                     <div class="contacts__item">
                         <div class="contacts__icon-wrapper">
                             <span class="contacts__icon"></span>
