--- a/src/tpl/partials/contacts.html
+++ b/src/tpl/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section class="contacts" id="contacts">
     <div class="container">
         <div class="contacts__container">
             <div class="contacts__top-wrapper">
@@ -43,30 +43,32 @@
 
 
             <div class="form ">
-                <form  id="form-js" action="" class="form__wrapper row row-cols-2 ">
+                <form id="form-js" action="" class="form__wrapper row row-cols-2 ">
                     <div class="form__input-left">
                         <div class="form__input-wrapper " data-validate="Name is required">
-                            <input class="form__input name-input " type="text" placeholder="NAME" id="name-js">
-                            <small class="name-error" >Name is not valid</small>
+                            <input class="form__input name-input " type="text" placeholder="NAME *" id="name-js">
+                            <small class="name-error">Name is not valid</small>
                             <span class="focus-border">
                                 <i></i>
-                            </span> 
+                            </span>
                         </div>
                         <div class="form__input-wrapper " data-validate="Email is required">
-                            <input class="form__input email-input" type="text" placeholder="EMAIL" id="email-js">
-                            <small class="email-error" >Email is not valid</small>
+                            <input class="form__input email-input" type="text" placeholder="EMAIL *" id="email-js">
+                            <small class="email-error">Email is not valid</small>
                         </div>
                         <div class="form__input-wrapper" data-validate="Subject is required">
-                            <input class="form__input subject-input" type="text" placeholder="SUBJECT" id="subject-js">>
-                            <small class="subject-error" >Subject is required</small>
+                            <input class="form__input subject-input" type="text" placeholder="SUBJECT *"
+                                id="subject-js">>
+                            <small class="subject-error">Subject is required</small>
                         </div>
                     </div>
                     <div class="form__input-right">
                         <div class="form__input-wrapper" data-validate="Message is required">
 
 
-                            <textarea class="form__input message-input"  name="message" placeholder="MESSAGE" id="message-js" ></textarea>
-                            <small class="message-error" >Longer message is required</small>
+                            <textarea class="form__input message-input" name="message" placeholder="MESSAGE *"
+                                id="message-js"></textarea>
+                            <small class="message-error">Longer message is required</small>
 
 
                         </div>
