--- a/src/tpl/partials/header--top.html
+++ b/src/tpl/partials/header--top.html
@@ -15,12 +15,12 @@
 
 
         <ul class="nav navbar-nav header__nav  d-flex flex-row  ">
-          <li class="navbar__item "><a class="navbar__link " href="#">Home</a></li>
-          <li class="navbar__item "><a class="navbar__link " href="#">Features</a></li>
-          <li class="navbar__item "><a class="navbar__link " href="#">About</a></li>
-          <li class="navbar__item "><a class="navbar__link  " href="#">Testimonals</a></li>
-          <li class="navbar__item "><a class="navbar__link " href="#">Pricing</a></li>
-          <li class="navbar__item "><a class="navbar__link " href="#">Contact</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#home">Home</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#features">Features</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#about">About</a></li>
+          <li class="navbar__item "><a class="navbar__link  " href="#testimonals">Testimonals</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#pricing">Pricing</a></li>
+          <li class="navbar__item "><a class="navbar__link " href="#contacts">Contact</a></li>
 
         </ul>
 
@@ -34,10 +34,10 @@
         <ul class="nav-list__mob">
           <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Home</a></li>
           <li class="navbar__item-mob"><a class="navbar__link-mob" href="#features">Features</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">About</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Testimonals</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Pricing</a></li>
-          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Contact</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#about">About</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#testimonals">Testimonals</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#pricing">Pricing</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#contacts">Contact</a></li>
         </ul>
       </nav>
 
@@ -67,8 +67,8 @@
             elementum magna ultricies accumsan. Cras venenatis lacus sed dolor placerat tempus. Morbi blandit at neque
             ut imperdiet.</p>
           <div class="introduction__btn-container ">
-            <button class="button-secondary _btn button">DOWNLOAD NOW</button>
-            <button class="button-secondary _btn button">VIEW FEATURES</button>
+            <a href="#pricing" class="button-secondary _btn button">DOWNLOAD NOW</a>
+            <a href="#features" class="button-secondary _btn button">VIEW FEATURES</a>
           </div>
         </div>
         <div class="introduction__img-container col">
