--- a/src/tpl/partials/pricing-plans.html
+++ b/src/tpl/partials/pricing-plans.html
@@ -1,4 +1,4 @@
-<section class="pricing-plans">
+<section class="pricing-plans" id="pricing">
     <div class="container">
         <div class="pricing-plans__container">
             <div class="pricing-plans__top-wrapper">
@@ -25,7 +25,8 @@
                 <div class="card-body card__bottom-content ">
                     <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
                         ipsum <span>lacinia</span> consectetur.</p>
-                    <button class="button-secondary _btn button-pricing button">ORDER NOW</button>
+                    <a href="#form-js" class="button-secondary _btn button-pricing button">ORDER NOW</a>
+
                 </div>
             </div>
             <div class="card card-wrapper ">
@@ -42,7 +43,7 @@
                 <div class="card-body card__bottom-content ">
                     <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
                         ipsum <span>lacinia</span> consectetur.</p>
-                    <button class="button-secondary _btn button-pricing button">ORDER NOW</button>
+                    <a href="#form-js" class="button-secondary _btn button-pricing button">ORDER NOW</a>
                 </div>
             </div>
             <div class="card card-wrapper ">
@@ -59,7 +60,7 @@
                 <div class="card-body card__bottom-content ">
                     <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
                         ipsum <span>lacinia</span> consectetur.</p>
-                    <button class="button-secondary _btn button-pricing button">ORDER NOW</button>
+                    <a href="#form-js" class="button-secondary _btn button-pricing button">ORDER NOW</a>
                 </div>
             </div>
             <div class="card card-wrapper ">
@@ -76,7 +77,7 @@
                 <div class="card-body card__bottom-content ">
                     <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
                         ipsum <span>lacinia</span> consectetur.</p>
-                    <button class="button-secondary _btn button-pricing button">ORDER NOW</button>
+                    <a href="#form-js" class="button-secondary _btn button-pricing button">ORDER NOW</a>
                 </div>
             </div>
         </div>
