--- a/src/tpl/partials/testimonals.html
+++ b/src/tpl/partials/testimonals.html
@@ -1,4 +1,4 @@
-<section class="testimonals">
+<section class="testimonals" id="testimonals">
     <div class="container">
         <div class="testimonals__container">
             <div class="testimonals__top-wrapper">
@@ -149,8 +149,9 @@
     <div class="container testimonals__bottom-container">
         <h2 class="testimonals__bottom-title">Like what you see? <span>Get this great theme now!</span> </h2>
         <div class="testimonals__btn-container ">
-            <button class="button-secondary _btn button">VIEW FEATURES</button>
-            <button class="button-secondary _btn button">DOWNLOAD NOW</button>
+            <a href="#features" class="button-secondary _btn button">VIEW FEATURES</a>
+            <a href="#pricing" class="button-secondary _btn button">DOWNLOAD NOW</a>
+
         </div>
     </div>
 
