--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
-  <link rel="stylesheet" href="assets/css/style.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 
 
@@ -29,9 +29,9 @@
 
 
   {{> device }}
- 
+
   {{> testimonals }}
- 
+
   {{> pricing-plans }}
 
   {{> contacts }}
