--- a/src/tpl/partials/about.html
+++ b/src/tpl/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about container">
+<section class="about container" id="about">
     <div class="about-container  row">
         <div class="about__img-container col">
             <img src="../../assets/images/devices.png" alt="" class="about-img">
