--- a/src/tpl/partials/footer.html
+++ b/src/tpl/partials/footer.html
@@ -1,38 +1,37 @@
 <footer class="footer">
-    <div class="container">
-      <div class="footer__container">
-        <div class="row justify-content-center">
-          <div class="col-auto">
-            <div class="footer__social-list__container">
-              <ul class="footer__social-items list-inline d-flex mb-1">
-                <li class="footer__social-item list-inline-item">
-                  <a href="" class="footer__social-link"></a>
-                </li>
-                <li class="footer__social-item list-inline-item">
-                  <a href="" class="footer__social-link"></a>
-                </li>
-                <li class="footer__social-item list-inline-item">
-                  <a href="" class="footer__social-link"></a>
-                </li>
-                <li class="footer__social-item list-inline-item">
-                  <a href="" class="footer__social-link"></a>
-                </li>
-                <li class="footer__social-item list-inline-item">
-                  <a href="" class="footer__social-link"></a>
-                </li>
-              </ul>
-            </div>
+  <div class="container">
+    <div class="footer__container">
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <div class="footer__social-list__container">
+            <ul class="footer__social-items list-inline d-flex mb-1">
+              <li class="footer__social-item list-inline-item">
+                <a href="https://www.behance.net" target="_blank" class="footer__social-link"></a>
+              </li>
+              <li class="footer__social-item list-inline-item">
+                <a href="https://dribbble.com" target="_blank" class="footer__social-link"></a>
+              </li>
+              <li class="footer__social-item list-inline-item">
+                <a href="https://twitter.com/home" target="_blank" class="footer__social-link"></a>
+              </li>
+              <li class="footer__social-item list-inline-item">
+                <a href="https://www.facebook.com" target="_blank" class="footer__social-link"></a>
+              </li>
+              <li class="footer__social-item list-inline-item">
+                <a href="https://twitter.com" target="_blank" class="footer__social-link"></a>
+              </li>
+            </ul>
           </div>
         </div>
-  
-        <div class="row justify-content-center">
-          <div class="col-auto">
-            <div class="footer__credits-wrapper">
-              <p class="footer__credits">copyright © 2014 lucid onepage theme</p>
-            </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <div class="footer__credits-wrapper">
+            <p class="footer__credits">copyright © 2014 lucid onepage theme</p>
           </div>
         </div>
       </div>
     </div>
-  </footer>
-  
+  </div>
+</footer>
