--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -154,3 +154,14 @@
 }
 
 
+@media (max-width: 450px){
+    .form{
+        &__input-wrapper small {
+            font-size: 8px;        
+        }
+    }
+  }
+
+
+
+
