--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -84,7 +84,7 @@
     width: 0px;
     transition: 0.5s;
   }
-
+  
   &__item:hover &__link::after {
     width: 45%;
   }
@@ -92,6 +92,31 @@
     
     width: 45%;
   }
+
+  &__item &__link.active::before{
+    @include m.line-before;
+    bottom: -9.8px;
+    left: 0px;
+    width: 0px;
+    transition: 0.8s;
+  }
+  &__item &__link.active::after{
+    @include m.line-after;
+    bottom: -9.8px;
+    left: auto;
+    right: -4px;
+    width: 0px;
+    transition: 0.5s;
+  }
+  
+  &__item.active &__link::after {
+    width: 45%;
+  }
+  &__item.active  &__link::before {
+    
+    width: 45%;
+  }
+
   &__link:hover{
     color: #fffefe;
   }
@@ -111,6 +136,16 @@
 }
 
   }
+
+
+  @media (max-width: 450px){
+    .navbar{
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+  }
+
+
 
 
 
