--- a/src/tpl/partials/contacts.html
+++ b/src/tpl/partials/contacts.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="form__input-wrapper" data-validate="Subject is required">
                             <input class="form__input subject-input" type="text" placeholder="SUBJECT *"
-                                id="subject-js">>
+                                id="subject-js">
                             <small class="subject-error">Subject is required</small>
                         </div>
                     </div>
