--- a/src/tpl/partials/header--top.html
+++ b/src/tpl/partials/header--top.html
@@ -15,12 +15,12 @@
 
 
         <ul class="nav navbar-nav header__nav  d-flex flex-row  ">
-          <li class="navbar__item "><a class="navbar__link " href="#home">Home</a></li>
-          <li class="navbar__item "><a class="navbar__link " href="#features">Features</a></li>
-          <li class="navbar__item "><a class="navbar__link " href="#about">About</a></li>
-          <li class="navbar__item "><a class="navbar__link  " href="#testimonals">Testimonals</a></li>
-          <li class="navbar__item "><a class="navbar__link " href="#pricing">Pricing</a></li>
-          <li class="navbar__item "><a class="navbar__link " href="#contacts">Contact</a></li>
+          <li class="navbar__item "><a class="navbar__link "  href="#home" data-target="home">Home</a></li>
+          <li class="navbar__item "><a class="navbar__link "  href="#features" data-target="features">Features</a></li>
+          <li class="navbar__item "><a class="navbar__link "  href="#about" data-target="about">About</a></li>
+          <li class="navbar__item "><a class="navbar__link  " href="#testimonals" data-target="testimonals">Testimonals</a></li>
+          <li class="navbar__item "><a class="navbar__link "  href="#pricing" data-target="pricing">Pricing</a></li>
+          <li class="navbar__item "><a class="navbar__link "  href="#contacts" data-target="contacts">Contact</a></li>
 
         </ul>
 
