--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -84,12 +84,16 @@
         max-width: 485px;
     } 
 
-}
+}   
+
 
 @media (max-width: 991px){
   .about{
-
-  &-img{
+    padding-bottom: 20px;
+    &__content-wrapper{
+        padding-top: 40px;
+    }
+    &-img{
     width: auto;
     height: 560px;
     margin-top: 31px;
@@ -123,10 +127,20 @@
 }
 }
 
-@media (max-width: 576px){
-  
 
-}
-
-
-
+@media (max-width: 450px){
+    .about{
+      &__sub-title{
+        font-size: 12px;
+      }
+      &__title{
+        font-size: 30px;
+      }
+      &__text{
+        font-size: 14px;
+      }
+      &__item-text{
+        font-size: 14px;
+      }
+    }
+  }
