--- a/src/assets/scss/layout/_contacts.scss
+++ b/src/assets/scss/layout/_contacts.scss
@@ -68,6 +68,14 @@
 
 }
 
+@media (max-width: 991px){
+    .contacts{
+        &__items-container{
+            gap: 20px;
+        }
+    }
+}
+
 
 
 @media (max-width: 767px){
@@ -78,6 +86,25 @@
             padding-top: 0px;
         }
         }
-      }
+}
+
+
+@media (max-width: 450px){
+    .contacts{
+
+        &__sub-title{
+            font-size: 12px;
+        }
+        &__title{
+            font-size: 30px;
+        }
+        &__item-text{
+            font-size: 16px;
+        }
+    }
+  }
+
+
+
 
 
