--- a/src/assets/scss/layout/_device.scss
+++ b/src/assets/scss/layout/_device.scss
@@ -55,6 +55,28 @@
 }
 
 
+
+
+@media (max-width: 1199px){
+    .device{
+        &__container{
+            flex-direction: column;
+            padding-top: 50px;
+        }
+        &__img{
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
+        &__text{
+
+            margin-right: 0px;
+        }
+    }
+}
+
+
+
 @media (max-width: 767px){
     .device{
         padding-top: 40px;
@@ -78,3 +100,21 @@
 }
 
 
+
+
+@media (max-width: 450px){
+    .device{
+      &__sub-title{
+        font-size: 12px;
+      }
+      &__title{
+        font-size: 30px;
+      }
+      &__text{
+        font-size: 14px;
+      }
+      &__item-text{
+        font-size: 14px;
+      }
+    }
+  }
