--- a/src/assets/scss/layout/_introduction.scss
+++ b/src/assets/scss/layout/_introduction.scss
@@ -69,7 +69,7 @@
     }
     &__container{
    flex-direction: column;
-   padding-top: 40px;
+   padding-top: 90px;
 
     }
     &__title{
@@ -96,13 +96,22 @@
 }
 
 
-// @media (max-width: 452px){
-//   .introduction{
-//     &__img{
-//       width: 95%;
-//     }
-//   }
-// }
 
 
-
+@media (max-width: 450px){
+  .introduction{
+    &__sub-title{
+      font-size: 12.5px;
+    }
+    &__title{
+      font-size: 37px;
+    }
+    &__text{
+      font-size: 14px;
+    }
+    &__btn-container{
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+}
