--- a/src/assets/scss/layout/_pricing-plans.scss
+++ b/src/assets/scss/layout/_pricing-plans.scss
@@ -38,3 +38,17 @@
 }
 
 
+
+
+@media (max-width: 450px){
+    .pricing-plans{
+
+
+      &__sub-title{
+        font-size: 12px;
+      }
+      &__title{
+        font-size: 30px;
+      }
+    }
+  }
